Change layout for different screens

--- a/webmenueng.html
+++ b/webmenueng.html
@@ -120,16 +120,16 @@
       <img class="haz" src="images/etterem.png" alt="etterem_img">
       <h2 class="szoveg">Bordán Étterem</h2>
       <p class="szoveg">Legjobb hely a városban</p>
-      <div class="location">
-        <img class="hely" src="images/hely.png" alt="hely_img">
+      <div class="show_inline">
+        <img class="hely_img" src="images/hely.png" alt="hely_img">
         <p class="szoveg2">Valahol az osztrák alpokban</p>
       </div>
       <div class="email">
-        <img class="hely" src="images/mail.png" alt="mail_img">
+        <img class="email_img" src="images/email.png" alt="email_img">
         <p class="szoveg2">etterem@mail.au</p>
       </div>
       <div class="web">
-        <img class="hely" src="images/web.png" alt="web_img">
+        <img class="web_img" src="images/web.png" alt="web_img">
         <p class="szoveg2">www.etterem.au</p>
       </div>
       <hr class="hr">
